<resources>
    <string name="app_name">SimpleEyes</string>
    <string name="home">首页</string>
    <string name="discover">发现</string>
    <string name="focus">关注</string>
    <string name="mine">我的</string>
    <string name="net_error_message">网络错误\n点击屏幕重试</string>
    <string name="empty_message">没有数据\n点击屏幕重试</string>
    <string name="show_all">查看全部</string>
    <string name="all_category">全部分类</string>
    <string name="all_author">全部作者</string>
    <string name="all_range">全部排行</string>
    <string name="advert">广告</string>
    <string name="elite">Andy精选</string>
    <string name="more_andy_elite">更多开眼编辑精选</string>
    <string name="no_more_string">-The End-</string>
    <string name="loading_message">正在加载中…</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback
    </string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap item</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="N_A">N/A</string>
    <string name="open_eyes_chinese">开眼</string>
    <string name="open_eyes_english">Eyepetizer</string>
    <string name="today_chose"><![CDATA[今日精选>>]]></string>
    <string name="for_today">for \n Today</string>
    <string name="ad_english_message">Daily appetizes for your eyes.Bon eyepetit.</string>
    <string name="ad_chinese_message">每日精选视频推介，让你大开眼界。</string>
    <string name="cache">缓存</string>
    <string name="add_follow">+ 关注</string>
    <string name="video_error_notice">网络错误或无连接，点击屏幕重试</string>
    <string name="find_interesting_video">帮你找到感兴趣的视频</string>
    <string name="cancel">取消</string>
    <string name="search_hot_remind">输入标题或描述中的关键字找到更多视频</string>
    <string name="hot_search_word">- 热门搜索词 -</string>
    <string name="remind_find_in_group">可以通过所属分类\n以及标题或描述中的关键词来查找</string>
    <string name="not_find_match_content">很抱歉没有找到相匹配的内容</string>
    <string name="daily_editor_elite">每日编辑精选</string>
    <string name="load_failed">加载更多失败</string>
    <string name="daily_elite_update">今日日报已更新</string>
    <string name="discover_en">Discover</string>
    <string name="Subscription_en">Subscription</string>
    <string name="login_notice">登录后即可关注作者、\n发表评论、同步收藏视频和播放记录</string>
    <string name="click_login">点击登录即可发表评论及同步已收藏视频</string>
    <string name="commit">评论</string>
    <string name="favorites">收藏</string>
    <string name="version">Version 3.8.1.2.216</string>
    <string name="user_agreement">登录或注册及同意开眼用户服务协议</string>
    <string name="mine_cache">我的缓存</string>
    <string name="edit">编辑</string>

    <string-array name="slogan_array_zh">
        <item>每日编辑精选，一如既往</item>
        <item>关注越多，发现越多</item>
        <item>离线自动缓存，精彩永不下线</item>
        <item>登录即可订阅、评论和同步已收藏视频</item>
    </string-array>

    <string-array name="profile_setting">
        <item>我的消息</item>
        <item>我的关注</item>
        <item>我的缓存</item>
        <item>观看记录</item>
        <item>意见反馈</item>
        <item>我要投稿</item>
    </string-array>
    <string-array name="slogan_array_en">
        <item>Daily appetizers for your eyes,as always</item>
        <item>Subscribe more,discover a whole lot more</item>
        <item>Enjoy your daily eyepetit,even without connectivity</item>
        <item>Sign in to comment &amp;collect videos,to subscript also</item>
    </string-array>
</resources>
