<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_load_more_loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/loading_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/loading_message"
            android:textColor="@color/black"
            android:textSize="12sp"/>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/fl_load_more_load_fail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/load_failed"
            android:textColor="@color/black"
            android:textSize="12sp"/>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rl_load_end_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jennifer.andy.simpleeyes.widget.font.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_more_string"
            app:font_name="lobster"/>

    </RelativeLayout>


</RelativeLayout>