<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rl_search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <android.support.v7.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/shape_hot_search_bg"
            app:closeIcon="@drawable/ic_action_cancel_grey"
            app:queryBackground="@color/transparent"
            app:queryHint="@string/find_interesting_video"
            app:searchHintIcon="@null"
            app:searchIcon="@null"
            app:submitBackground="@color/transparent"/>

        <com.jennifer.andy.simpleeyes.widget.font.CustomFontTextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/cancel"
            app:font_name="normal"/>

    </LinearLayout>

    <com.jennifer.andy.simpleeyes.widget.state.MultipleStateView
        android:id="@+id/multiple_state_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_search_remind"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <com.jennifer.andy.simpleeyes.widget.font.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/search_hot_remind"
                android:textColor="@color/gray_B7B9B8"
                android:textSize="13sp"
                app:font_name="normal"/>

            <com.jennifer.andy.simpleeyes.widget.font.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/hot_search_word"
                android:textColor="@color/black"
                app:font_name="normal"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_search_remind"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"/>

    </com.jennifer.andy.simpleeyes.widget.state.MultipleStateView>


</LinearLayout>